# python-ipernity

./: .flake8  .gitignore  .readthedocs.yaml  CHANGELOG.rst  LICENSE  README.rst  README.tests  pyproject.toml  update-api-data.py
.github/workflows/: release-test.yml  release.yml  test.yml
docs/: api.rst  auth.rst  conf.py  exceptions.rst  index.rst  intro.rst  method.rst  usage.rst
ipernity/: __init__.py  __main__.py  api.py  auth.py  exceptions.py  method.py  methods.json
tests/: conftest.py  data.yaml  test_00base.py  test_0upload.py  test_0web.py  test_album.py  test_api_methods.py  test_doc.py  test_errors.py  test_group.py  test_replace.py  test_test.py  test_walk.py  test_zz_delete.py
