[project]
name = "PyIpernity"
description = "Library to access the Ipernity API"
readme = "README.rst"
authors = [
    { name = "rcw-2", email = "mail@rcw-2.de" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
keywords = ["ipernity"]
dependencies = ["requests"]
requires-python = ">=3.8"
dynamic = ["version"]

[project.urls]
documentation = "https://pyipernity.readthedocs.io/"
homepage = "https://github.com/rcw-2/python-ipernity"

[project.optional-dependencies]
docs = ["sphinx", "tomli; python_version < '3.11'"]

[build-system]
requires = ["setuptools", "setuptools_scm>=6.4"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ipernity"]

[tool.setuptools_scm]
write_to = "ipernity/_version.py"
version_scheme = "guess-next-dev"
local_scheme = "dirty-tag"

[tool.coverage.run]
source = ["ipernity"]
branch = true
relative_files = true
parallel = true

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--cov --cov-report html --cov-report xml"
